force-app/main/default/objects/Product2/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Spares</relationshipLabel>
    <relationshipName>Spares</relationshipName>
    <type>Lookup</type>
</CustomField>