force-app/main/default/objects/Product2/fields/Spare_Name__c.field-meta.xml
<CustomField>
    <fullName>Spare_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spare Name</label>
    <type>Text</type>
</CustomField>